--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/svg+xml" href="../assets/weather.svg" />
 		<link rel="stylesheet" href="./style.css" />
-		<link rel="icon" href="./assets/home.svg" />
-		<title>Home</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Weather</title>
 	</head>
 
 	<body>
-		<h1>Services</h1>
-		<section class="navlinks">
-			<a href="./calendar/">
-				<img src="./assets/calendar.svg" />
-				<h3>Calendar</h3>
-			</a>
-			<a href="./weather/">
-				<img src="./assets/weather.svg" />
-				<h3>Weather</h3>
-			</a>
-		</section>
+		<div id="container">
+			<canvas></canvas>
+			<canvas></canvas>
+			<canvas></canvas>
+			<canvas></canvas>
+			<canvas></canvas>
+		</div>
 	</body>
 </html>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="./app.js"></script>
